# github-python-project-demo

./: Justfile  pyproject.toml
.github/workflows/: publish.yml  test.yml
github_python_project_demo/: main.py
tests/: test_main.py
