[project]
name = "github-python-project-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["rich>=13.9.2"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]
package = true

[project.scripts]
github_python_project_demo = "github_python_project_demo.main:main"
